# Stellar-Engine-2.0

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  test.scene  test_scene_1.scene  test_scene_2.scene  vcpkg.json
editor/: CMakeLists.txt  editor.cpp  editor.hpp  main.cpp
editor/panel/: asset_browser_panel.cpp  asset_browser_panel.hpp  logger_panel.cpp  logger_panel.hpp  performance_stats_panel.cpp  performance_stats_panel.hpp  scene_hiearchy_panel.cpp  scene_hiearchy_panel.hpp  toolbar_panel.cpp  toolbar_panel.hpp  viewport_panel.cpp  viewport_panel.hpp
engine/: CMakeLists.txt
engine/core/: logger.cpp  logger.hpp  types.hpp  uuid.cpp  uuid.hpp  window.cpp  window.hpp
engine/data/: components.cpp  components.hpp  entity.cpp  entity.hpp  scene.cpp  scene.hpp
engine/graphics/: camera.cpp  camera.hpp  model.cpp  model.hpp  texture.cpp  texture.hpp
engine/physics/: aabb.hpp  physics.cpp  physics.hpp  types.hpp
engine/systems/: deffered_rendering_system.cpp  deffered_rendering_system.hpp  ssao_system.cpp  ssao_system.hpp
engine/utils/: gui.cpp  gui.hpp  threadpool.hpp  utils.cpp  utils.hpp
shaders/: atmosphere.glsl  billboard.glsl  composition.glsl  deffered.glsl  depth_prepass.glsl  draw.glsl  filter_gauss.glsl  lines.glsl  loading_screen.glsl  normal_shadow.glsl  shared.inl  ssao_blur.glsl  ssao_generation.glsl  variance_shadow.glsl
src/: editor.hpp  main.cpp  scene.hpp  texture.cpp  window.cpp  window.hpp
